# RimBook

./: .gitignore  .rimbook.yaml  HANDOFF_版本回退.md  README.md  create_shortcut.py  pyproject.toml  start.bat
docs/plans/: 2026-07-17-volume-batch-planning.md  2026-07-20-beat-microscene-keynote-design.md
scripts/: e2e_branch_test.py  e2e_volume_framework.py  fix_fragmented_codex.py  verify_rollback.py
src/rimbook/: __init__.py  cli.py  config.py  project.py
src/rimbook/codex/: __init__.py  migrate.py  models.py  resolve.py  store.py  sync.py
src/rimbook/llm/: __init__.py  client.py  prompts.py  prompts_store.py  trace.py
src/rimbook/memory/: __init__.py  assembler.py  entity_state.py  summarizer.py  threads.py  token_budget.py  window.py
src/rimbook/outline/: __init__.py  models.py  store.py
src/rimbook/pipeline/: __init__.py  checker.py  planner.py  post_write.py  writer.py
src/rimbook/planning_entities/: models.py  (+7 more)
test/: config.yaml
test/drafts/: ch001.md
test/outline/: synopsis.md
tests/: conftest.py
tests/outline/: test_delete_and_sync.py  test_sync_volume_chapters.py
tests/pipeline/: test_parse_volume_batch.py  test_plan_volume_batch.py  test_plan_volume_v2.py
tests/planning_entities/: test_completeness.py  test_dual_codex.py  test_expander.py  test_identity.py  test_planner_integration.py  test_routes.py  test_store_and_service.py
tests/versioning/: test_clean_volume_recaps.py
web/: __init__.py  __main__.py
web/backend/: app.py  deps.py  sse.py
web/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+724 files in other folders)
