[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rimbook"
version = "0.1.0"
description = "LLM-powered long-form fiction writing workbench with structured context management."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dandan" }]
license = { text = "MIT" }
dependencies = [
    "openai>=1.40.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1.0",
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
]

[project.scripts]
rimbook = "rimbook.cli:app"
rimbook-web = "rimbook.web:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rimbook"]
